--- a/configs/profiles/ideo_full.yml
+++ b/configs/profiles/ideo_full.yml
@@ -7,12 +7,12 @@ corpus_id: "web1"
 view: "ideology_global"
 modality: "web"
 
-label_field: "ideology"  # héritage (si présent dans le TEI)
-label_fields:
-  - "ideology"
-  - "domain"
-  - "crawl"
-label_map: "configs/label_maps/ideology_global.yml"
+ideology:
+  mode: actors
+  actors_yaml: configs/label_maps/ideology_actors.yml
+  view: five_way
+  unknown_actors:
+    policy: drop
 
 train_prop: 0.8
 min_chars: 200
