--- a/configs/profiles/ideo_quick.yml
+++ b/configs/profiles/ideo_quick.yml
@@ -9,22 +9,11 @@ modality: "web"
 
 # Nouveau bloc idéologie (configurable via OVERRIDES)
 ideology:
-  granularity: binary         # binary | five_way | intra_side | derived
-  label_source: manual        # manual | derived
-  label_fields_manual: ["ideology"]
-  label_fields_derived: ["party", "ideology_total", "domain", "crawl"]
-  label_map: "configs/label_maps/ideology_binary.yml"
-  unknown_labels:
+  mode: actors
+  actors_yaml: configs/label_maps/ideology_actors.yml
+  view: binary               # binary | five_way | left_intra | right_intra
+  unknown_actors:
     policy: drop
-    other_label: other
-  intra_side:
-    side: left                # utilisé si granularity=intra_side
-    label_map: "configs/label_maps/ideology_left_intra.yml"
-
-# Filtres optionnels sur les acteurs politiques
-actors:
-  include: []                 # liste blanche d'acteurs
-  min_docs: 0                 # seuil minimum de docs par acteur
 
 train_prop: 0.8
 min_chars: 280
