--- a/configs/superior/exp_ideo_balancing_sweep.yml
+++ b/configs/superior/exp_ideo_balancing_sweep.yml
@@ -28,13 +28,13 @@ axes:
           data.merge_mode: single
           analysis.compare_by: []
 
-      - label: web1_asr1_juxt
-        overrides:
-          dataset_id: web1_asr1
-          data.corpus_ids: [web1, asr1]
-          data.merge_mode: juxtaposed
-          data.source_field: corpus_id
-          analysis.compare_by: [corpus_id]
+#      - label: web1_asr1_juxt
+#        overrides:
+#          dataset_id: web1_asr1
+#          data.corpus_ids: [web1, asr1]
+#          data.merge_mode: juxtaposed
+#          data.source_field: corpus_id
+#          analysis.compare_by: [corpus_id]
 
   - name: balance_strategy
     type: choice
